--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "core-js": "^2.4.1",
     "errorhandler": "^1.5.0",
     "express": "^4.15.3",
+    "gulp-sass": "^3.1.0",
     "merge2": "^1.0.3",
     "path": "^0.12.7",
     "rxjs": "^5.4.0",
